[project]
name = "openrouter_node"
description = "A custom node for ComfyUI that allows you to interact with OpenRouter's chat/completion API, providing access to a wide range of models."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["requests", "tiktoken", "Pillow"]

[project.urls]
Repository = "https://github.com/Tr1dae/ComfyUI-Openrouter_node_safe"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Tr1dae"
DisplayName = "ComfyUI-Openrouter_node_safe"
Icon = ""
